[gd_scene load_steps=6 format=3 uid="uid://b8whxyirwpfts"]

[ext_resource type="Script" uid="uid://fh7bv16ja1gj" path="res://Items/Item Scripts/item_node.gd" id="1_hc1pc"]
[ext_resource type="Resource" uid="uid://tds1xddhqf7k" path="res://Items/Item-Scenes-res/empty_bottle.tres" id="2_rw1oo"]
[ext_resource type="Texture2D" uid="uid://disrie6g8shhx" path="res://art/items/beer-bottle-2M7weoA-..._imresizer.jpg" id="3_rw1oo"]

[sub_resource type="GDScript" id="GDScript_rw1oo"]
script/source = "class_name ItemArea
extends Area2D

@onready var area:Area2D = self
"

[sub_resource type="CircleShape2D" id="CircleShape2D_6yqa2"]
radius = 23.0217

[node name="empty_bottle" type="Node2D"]
script = ExtResource("1_hc1pc")
item = ExtResource("2_rw1oo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_rw1oo")

[node name="pickable_area" type="Area2D" parent="."]
script = SubResource("GDScript_rw1oo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickable_area"]
shape = SubResource("CircleShape2D_6yqa2")

[connection signal="body_entered" from="pickable_area" to="." method="_on_pickable_area_body_entered"]
[connection signal="body_exited" from="pickable_area" to="." method="_on_pickable_area_body_exited"]
